fix(cookie-banner): enforce alignment of preference toggle items with !important

--- a/src/components/CookieBanner/_scss/styles.scss
+++ b/src/components/CookieBanner/_scss/styles.scss
@@ -267,7 +267,7 @@
 }
 
 .preference-toggle {
-  align-items: center;
+  align-items: center !important;
   position: relative;
   display: inline-flex;
   height: 24px;
